refactor(core): complete Java migration cleanup
- rename launcher entrypoint to Launcher and update build/jpackage templates

- refactor fs, updater, and launcher support models/callers for Java-first APIs

- apply static-analysis-driven fixes across node/support modules

- add and expand deterministic unit tests for config/fs/launcher/updater/support components